added backtracking and recursion problems

--- a/Recursion_backtracking/Recursion and Backtracking Problems.ipynb
+++ b/Recursion_backtracking/Recursion and Backtracking Problems.ipynb
@@ -123,9 +123,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "10, 20, 30, .\n",
+      "10, 50, .\n",
+      "20, 40, .\n"
+     ]
+    }
+   ],
    "source": [
     "def takeInput():\n",
     "    '''Takes input'''\n",
@@ -146,10 +163,8 @@
     "            print()\n",
     "        return\n",
     "    \n",
-    "    if currentSum > target: # Current Sum is greater return back \n",
-    "        return\n",
-    "    \n",
-    "    solve(arr, idx + 1, target, current + str(arr[idx]) + \", \", currentSum + arr[idx]) #Include number \n",
+    "    if arr[idx] + currentSum <= target: \n",
+    "        solve(arr, idx + 1, target, current + str(arr[idx]) + \", \", currentSum + arr[idx]) #Include number \n",
     "    solve(arr, idx + 1, target, current, currentSum) # Exclude number \n",
     "    \n",
     "\n",
